A small CSS fix, added some spacing

--- a/public/assets/scss/home.scss
+++ b/public/assets/scss/home.scss
@@ -12,6 +12,8 @@
   margin: 0 auto;
   padding-top: 14px;
   padding-bottom: 14px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .site-logo {
@@ -34,12 +36,16 @@
   padding-bottom: 22px;
   text-align: center;
   font-size: 12px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .home-page {
   max-width: 1180px;
   padding-top: 28px;
   padding-bottom: 24px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .category-section {
